src/paths/snapshots/mandala__shapes__curves__curve_tests__f32-3d-QuadraticCurve.snap
---
source: src/shapes/curves.rs
expression: "[curve.eval(0.0), curve.eval(0.25), curve.eval(0.5), curve.eval(0.75),\n        curve.eval(1.0)]"
---
[
    Vector3 {
        x: 0.0,
        y: 0.0,
        z: 0.0,
    },
    Vector3 {
        x: 0.5,
        y: 0.5,
        z: 0.5,
    },
    Vector3 {
        x: 1.0,
        y: 1.0,
        z: 1.0,
    },
    Vector3 {
        x: 1.5,
        y: 1.5,
        z: 1.5,
    },
    Vector3 {
        x: 2.0,
        y: 2.0,
        z: 2.0,
    },
]
